GET /gfe/{locus}/{imgt-release} added
